--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  ffi: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  ffigen: ^2.2.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
